--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('./src/index').then(undefined, console.error.bind(console));
+      System.import('./index').then(undefined, console.error.bind(console));
     </script>
   </body>
 </html>
