--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="root"></div>
+        <script src="/dist/vendor.bundle.js"></script>
         <script src="/dist/bundle.js"></script>
     </body>
 </html>
